--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -208,12 +208,24 @@ h2 {
   text-decoration: underline;
 }
 
+.bio {
+  column-count: 2;
+  text-align: justify;
+}
+
 :focus {
   outline: none;
 }
 
+.profilePic {
+  width: 100%;
+  float: left;
+  margin: 10px 0;
+}
+
 .page {
   /* display: none; */
+  opacity: 0;
   color: #2e2e2a;
   font-family: "tex_gyre_scholaregular", serif;
   height: 600px;
