--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -8,6 +8,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow: scroll;
 }
 
 * {
@@ -47,7 +48,7 @@ body {
   left: 0px;
   width: 100%;
   height: 100vh;
-  pointer-events: none;
+  /* pointer-events: none; */
 }
 
 .covers {
