--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -34,7 +34,7 @@ li {
   text-align: center;
   transition: all 2s cubic-bezier(0.165, 0.84, 0.44, 1);
   z-index: 2000;
-  color: rgba(255, 243, 139, 0.836);
+  color: #fefba0c4;
 }
 
 body {
@@ -124,7 +124,7 @@ body {
   width: 0;
   height: 0;
   border-top: 2vw solid transparent;
-  border-right: 10vw solid #fa222228;
+  border-right: 10vw solid #ff2d2d4d;
   border-bottom: 2vw solid transparent;
   position: absolute;
   transition: all 2s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -137,7 +137,7 @@ body {
   width: 0;
   height: 0;
   border-top: solid transparent;
-  border-left: solid #fa222228;
+  border-left: solid #ff2d2d4d;
   border-bottom: solid transparent;
   position: absolute;
   transition: all 2s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -151,7 +151,7 @@ body {
   width: 0;
   height: 0;
   border-top: 3vw solid transparent;
-  border-right: 10vw solid #0088ff47;
+  border-right: 10vw solid #00a2ff5b;
   border-bottom: 3vw solid transparent;
   position: absolute;
   transition: all 2s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -165,7 +165,7 @@ body {
   width: 0;
   height: 0;
   border-top: 3vw solid transparent;
-  border-left: 10vw solid #0088ff47;
+  border-left: 10vw solid #00a2ff5b;
   border-bottom: 3vw solid transparent;
   position: absolute;
   transition: all 2s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -179,7 +179,7 @@ body {
   width: 0;
   height: 0;
   border-top: 3vw solid transparent;
-  border-left: 10vw solid #ffed2347;
+  border-left: 10vw solid #fff04b75;
   border-bottom: 3vw solid transparent;
   position: absolute;
   transition: all 2s cubic-bezier(0.165, 0.84, 0.44, 1);
