--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -46,10 +46,11 @@ body {
 
 .backgrounds {
   position: fixed;
-  top: 0vh;
+  top: 0px;
   left: 0px;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  display: none;
 }
 
 .covers {
