--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -118,28 +118,7 @@
 .ui-region-tooltip {
   font-size: 13px !important;
 }
-.ui-miniatures-slider {
-  text-align: center;
-  height: 180px;
-  opacity: 0;
-  z-index: 100;
-  -webkit-transition: opacity 200ms;
-  -moz-transition: opacity 200ms;
-  -o-transition: opacity 200ms;
-  -ms-transition: opacity 200ms;
-  transition: opacity 200ms;
-  -webkit-transition-delay: 100ms;
-  -moz-transition-delay: 100ms;
-  -o-transition-delay: 100ms;
-  -ms-transition-delay: 100ms;
-  transition-delay: 100ms;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
+
 .ui-miniatures-slider .container {
   margin-top: 25px;
   position: relative;
@@ -195,29 +174,7 @@
 .show-miniatures .show-miniatures #controls .ui-icon:hover {
   color: #eee;
 }
-.ui-tooltip {
-  position: absolute;
-  float: left;
-  background: rgba(33, 33, 33, 0.8);
-  padding: 5px 10px;
-  font: 10px arial;
-  color: white;
-  letter-spacing: 1px;
-  white-space: nowrap;
-  z-index: 1000;
-  opacity: 0;
-  cursor: default;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  border-radius: 5px;
-  -webkit-transition: opacity 0.1s;
-  -moz-transition: opacity 0.1s;
-  -o-transition: opacity 0.1s;
-  -ms-transition: opacity 0.1s;
-  transition: opacity 0.1s;
-}
+
 .ui-tooltip-visible {
   opacity: 1;
 }
@@ -269,20 +226,9 @@
   top: 50%;
   margin-top: -4px;
 }
-.ui-menu {
-  position: absolute;
-  z-index: 102;
-  background-color: #ccc;
-  opacity: 0;
-  width: 200px;
-  -webkit-transition: opacity 0.2s;
-  -moz-transition: opacity 0.2s;
-  -o-transition: opacity 0.2s;
-  -ms-transition: opacity 0.2s;
-  transition: opacity 0.2s;
-  border-radius: 5px;
-}
+
 .ui-menu .ui-menu-item {
+  display: none;
   height: 34px;
   border-bottom: 1px solid #bbb;
   cursor: pointer;
@@ -346,26 +292,7 @@ body {
 .touch-device.display-single .ui-arrow-previous-page {
   display: none;
 }
-/* .ui-arrow-next-page,
-.ui-arrow-previous-page {
-  width: 30px;
-  height: 60px;
-  position: absolute;
-  top: 50%;
-  top: calc(50% - 30px);
-  right: -40px;
-  z-index: 10;
-  background-image: url(../../../catalog/assets/img/arrows@2x.png);
-  background-size: 60px 120px;
-  background-position: 0 0;
-  opacity: 0.5;
-  -webkit-transition: opacity 0.2s;
-  -moz-transition: opacity 0.2s;
-  -o-transition: opacity 0.2s;
-  -ms-transition: opacity 0.2s;
-  transition: opacity 0.2s;
-  cursor: pointer;
-} */
+
 .ui-arrow-previous-page {
   background-position: 30px 0;
   right: auto;
@@ -464,10 +391,6 @@ body {
 }
 
 @media screen and (max-width: 1000px) {
-  #controls #page-slider {
-    position: relative;
-    z-index: 2;
-  }
   #controls .ui-options {
     right: 5px;
   }
@@ -553,26 +476,7 @@ html:-webkit-full-screen #controls #ui-icon-full-screen .fa:before {
 html:full-screen #controls #ui-icon-full-screen .fa:before {
   content: "\f066";
 }
-.zoom-slider {
-  position: absolute;
-  z-index: 100;
-  width: 44px;
-  height: 150px;
-  opacity: 0;
-  -webkit-transform: translateY(100%);
-  -webkit-transition: -webkit-transform 0.1s, opacity 0.2s;
-  -moz-transition: -moz-transform 0.1s, opacity 0.2s;
-  -ms-transition: -ms-transform 0.1s, opacity 0.2s;
-  -o-transition: -o-transform 0.1s, opacity 0.2s;
-  transition: transform 0.1s, opacity 0.2s;
-  top: 0;
-  left: -100px;
-  -webkit-transition-delay: 0.1s;
-  -moz-transition-delay: 0.1s;
-  -o-transition-delay: 0.1s;
-  -ms-transition-delay: 0.1s;
-  transition-delay: 0.1s;
-}
+
 .zoom-slider .ui-slider {
   width: 44px;
   height: 90px;
@@ -655,21 +559,7 @@ html:full-screen #controls #ui-icon-full-screen .fa:before {
 #controls .ui-options #ui-icon-toggle {
   display: none;
 }
-.ui-share-box {
-  position: fixed;
-  top: 0;
-  left: -10000px;
-  width: 100%;
-  height: 100%;
-  z-index: 101;
-  background-color: rgba(0, 0, 0, 0.7);
-  opacity: 0;
-  -webkit-transition: opacity 0.2s;
-  -moz-transition: opacity 0.2s;
-  -o-transition: opacity 0.2s;
-  -ms-transition: opacity 0.2s;
-  transition: opacity 0.2s;
-}
+
 .ui-share-box .ui-share-options {
   font-size: 40px;
   overflow: auto;
