--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,6 +4,8 @@
   margin-left: auto;
   margin-right: auto;
   position: relative;
+  touch-action: pan-y;
+  -ms-touch-action: pan-y;
 }
 
 /* html {
@@ -24,8 +26,9 @@ li {
 }
 
 #catalog {
-  opacity: 0;
-  display: none;
+  /* opacity: 0; */
+  touch-action: none;
+  /* display: none; */
 }
 
 .myName {
