--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -313,7 +313,7 @@ svg {
   margin-bottom: 1vh;
 }
 
-.downCenter {
+/* .downCenter {
   position: absolute;
   width: 100%;
   bottom: 0px;
@@ -324,9 +324,9 @@ svg {
   text-align: center;
   padding-bottom: 36px;
   letter-spacing: 0.03em;
-}
+} */
 
-.arrow {
+/* .arrow {
   position: relative;
   left: 50%;
   margin-left: -9px;
@@ -342,7 +342,7 @@ svg {
   -ms-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
-  /* Rotate Origin */
+
   -webkit-transform-origin: bottom left;
   -moz-transform-origin: bottom left;
   -ms-transform-origin: bottom left;
@@ -365,7 +365,6 @@ svg {
   -ms-transform: rotate(-90deg);
   -o-transform: rotate(-90deg);
   transform: rotate(-90deg);
-  /* Rotate Origin */
   -webkit-transform-origin: bottom left;
   -moz-transform-origin: bottom left;
   -ms-transform-origin: bottom left;
@@ -385,10 +384,10 @@ svg {
   -webkit-transition: opacity 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   -moz-transition: opacity 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   -o-transition: opacity 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
+} */
 
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
   .pageText {
     font-size: 2vh;
   }
-}
+} */
