--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -47,6 +47,20 @@ body {
   overflow-y: scroll;
 }
 
+.toTop {
+  box-sizing: border-box;
+  width: 0;
+  height: 0;
+  border-top: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-bottom: 20px solid yellow;
+  border-left: 20px solid transparent;
+  position: absolute;
+  top: 0px;
+  left: 46vw;
+  z-index: 100;
+}
+
 .backgrounds {
   position: fixed;
   top: 0px;
