--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -311,7 +311,7 @@ h2 {
 } */
 
 .pageText {
-  filter: grayscale();
+  filter: grayscale(0.8);
   font-size: 1.4vh;
   font-family: "tex_gyre_scholaregular", serif;
   padding: 13vh 9vh;
