--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -424,9 +424,9 @@ svg {
 	width: 80px;
 	margin: 0px 0 0 -40px;
 	line-height: 60px;
-	position: absolute;
+	position: fixed;
 	left: 50%;
-	bottom: 0px;
+	bottom: 20px;
 	color: #FFF;
 	text-align: center;
 	font-size: 70px;
