--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -285,6 +285,7 @@ h2 {
   column-count: 2;
   text-align: justify;
   /* height: 100%; */
+	
 }
 
 :focus {
@@ -415,6 +416,10 @@ svg {
  @media screen and (max-width: 1000px) {
   .pageText {
    padding: 3vh 5vh;
+  }
+	 
+  .bio {
+   padding: 5vh 5vh;
   }
 } 
 
