--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -9247,6 +9247,7 @@ body:not(.tt-boxed) .tt-footer-inner,
 @media (max-width: 1024px) {
   #tt-footer {
     padding: 60px 0;
+		display:none;
   }
   .tt-footer-inner {
     display: flex;
